--- a/Mon article.tex
+++ b/Mon article.tex
@@ -44,6 +44,58 @@
 
 \newpage
 
+\section{Introduction}
+La notion des réseaux sociaux ont vu jour aux Etats-Unis en
+1995avec l’avènement des premiers réseaux apparu sur
+internet par Randy, appelé «classmates » qui à été utilisé
+par tous les continents en 2004. Les réseaux sociaux se sont
+développés à début du XXIème siècle suite à l’avènement de
+la nouvelle technologie de l’information et de
+communication.
+Nombreux connaissent aujourd’hui les outils utilisés comme
+facebook, twitter, google, snapchat, instagram pour ne cité
+que ceux-ci, ses outils sont utilisés partout dans le monde,
+rare sont ce qui ne le connaissent pas.
+Les réseaux sociaux occupe une grande place de nos activités,
+c&#39;est-à-dire nous vivons dans un monde ou tout est numérisé,
+être connecté sur les différents outils comme facebook qui
+est une application dans la quelle il faut avoir un profil pour
+
+être identifier partout dans le monde pour être en contacte
+avec nombreuses personne dans le monde. Facebook est un
+compte tu peux retrouver des anciens amis, beaucoup
+d’évenement se passe sur cette application comme suivre les
+actualités de n’importe quel pays, on peut regarder des clips
+vidéos et même regarder les films. Facebook aide surtout les
+étudiants de la Belgique de trouver un travail, et des stages
+pour les étudiants sur la plateforme « jobétudiants »
+L’impacte des reseaux sociaux touche beaucoup à l’utilisateur
+qui laisse toutes leur activité pour etre sur les reseaux.
+D’ailleurs ces outils facilitent des rencontres qu’on peut
+qualifié d’extraordinaire, la preuve en est que les sites de
+rencontres qui met les individus en relation de façon
+phénoménale. Par contre ses outils vont impactés nos
+manière de travail. On peut s’en passer des réseaux sociaux il
+est indispensable dans la vie de chacun d’entre nous, ils
+occupent une place très importante dans la société, publier
+une nouvelle sur facebook ou twitter peut faire le buzz à
+l’échelle internationale quand il tombe dans la main d’une
+personne mal intentionné.
+L’utilisation des réseaux sociaux sont devenir aujourd’hui très
+indispensable dans la vie des jeunes adolescents. Une
+information sur les réseaux comme : twitter peut entraver un
+buzz sur toutes les applications comme twitter, facebook,
+instagram. Information peut se développer à l’échelle
+nationale ou internationale, quand une information est publié
+toutes les internautes reçoivent à la minute qui suivre, ils ont
+un certain pouvoir de fédérer, ressembler les informations et
+créer une sorte de conversation dans le monde. Ces
+publication peuvent parfais tomber dans la main des
+
+mauvaises personnes, en l’occurrence des jeunes. Les réseaux
+sociaux peuvent aussi causer la dépression, regard critique
+sur les gens, les réseaux sociaux peuvent être la cause de
+malaise pour les jeunes.
 
 
 
