--- a/Mon article.tex
+++ b/Mon article.tex
@@ -97,6 +97,36 @@ sociaux peuvent aussi causer la dépression, regard critique
 sur les gens, les réseaux sociaux peuvent être la cause de
 malaise pour les jeunes.
 
+\section{Définition :}
+Les réseaux sociaux est un ensemble d’outil qui permet aux
+gens de ce connecté, faire rencontre sur des outils comme
+Messenger, Whatsapp, Facebook, Snapchat, instagram pour
+ne citer que ceux-ci.
+\section{Comment les réseaux sociaux ont envahi le cœur des jeunes
+adolescents pour le meilleur et pour le pire?}
+Entre 2011 et 2013, Le psychologue Américain Jonathan
+Haidt a remarqué une forte augmentation d’une maladie de
+dépression chez les jeunes adolescents en Amérique sous
+l’effet de l’utilisation des réseaux sociaux par les jeunes. Cette
+utilisation des réseaux sociaux a causer un certain nombre de
+jeunes admis à l’hôpital pour une dépression mental causer
+par la forte utilisation des réseaux sociaux. Sur 100.000
+jeunes âgées de 15 à 19 ans, 62% des jeunes filles utilisatrice
+des réseaux sociaux ont été admises à l’hôpital. En plus, Entre
+1999-2019, un certain nombre de cas de suicides des jeunes
+adolescents ont été enregistré sur 1 million des jeunes filles.
+Plus de 151% des jeunes filles se suicides. En 2009 ce constat
+fait par les médecins qu’il y a une augmentation de suicide.
+En effet, en été 2006 une date très importante dans l’histoire
+des réseaux sociaux, la plus par des réseaux son devenus
+disponible sur les téléphones, et a commencé à prendre de
+l’ampleur des années suivantes. L’arriver du covid qui à
+
+déclenché le confinement, une augmentation de l’utilisation
+d’internet a été enregistré chez les jeunes fille japonaises.
+Une association tokyoïte prévient sur la hausse des suicides
+des jeunes adolescentes. La plus majeure partie des jeunes
+adolescents dépendent des réseaux sociaux. 
 
 
 \end{document}
