--- a/Mon article.tex
+++ b/Mon article.tex
@@ -128,5 +128,82 @@ Une association tokyoïte prévient sur la hausse des suicides
 des jeunes adolescentes. La plus majeure partie des jeunes
 adolescents dépendent des réseaux sociaux. 
 
+\section{Conséquences des réseaux sociaux :}
+Les réseaux sociaux ont une conséquence désastreuse qui
+touche le plus souvent la vie des jeunes filles.
+En effet, sur les réseaux sociaux, certaine personne
+présentent leur mode de vie, expose leur corps. A cause de
+tout ce comportement sur les réseaux sociaux, les jeunes
+filles pratiquent la même chose qui pousse à entrainer une
+perte d’estime de soi.
+Les réseaux sociaux sont devenus plus à la mode en Amérique
+du Nord plus que chez les français. Beaucoup de gens
+utilisent ces réseaux pour intimider les internautes, ils
+utilisent ces réseaux pour harceler les gens en rédigeant des
+messages menassent, des photos qui leur pousse à
+l’excitation. Cette histoire est plus réel, ces personnes mal
+intentionné qui se déguisent en en fille sur les réseaux pour
+avoir des vidéos des jeunes hommes. Beaucoup de
+pédophiles s’en servent des réseaux sociaux pour séduire et
+convaincre les fillettes et les jeunes adolescentes pour
+obtenir les photos nues des fillettes. La majeure partie des
+utilisateurs des réseaux sociaux son les jeunes, ces personnes
+qui se déguisent en fille savent ou trouver ces jeunes sur les
+réseaux sociaux. C’est pour cette raison, il est important de
+contrôler les jeunes sur les réseaux sociaux.
+
+Pour eux il n’y a pas assez de différence entre la vie de
+professionnelle et la vie privé, les utilisateurs n’ont plus de
+limite entre leur vie privée et leur vie professionnelle.
+Les arnaqueurs informatiques sont devenus de plus en plus
+très fort dans le vol d’identité via les réseaux sociaux.
+Beaucoup de gens se servent des réseaux sociaux pour avoir
+accès des renseignements personnels et privé.
+Certains se servent pour rentrer dans l’ordinateur des gens
+pour voler des mots de passe des cartes crédit, carte
+bancaire, numéro de l’assurance sociale et plus encore.
+D’une part les réseaux sociaux sont des sources
+d’information, et d’autre par ils sont aussi à la base des
+désinformations. Ces information sont diffusés à la minute ou
+elle est partager que cela soit vrai ou fausse. C’est pour cette
+raison ceux qui utilisent les réseaux sociaux doivent d’abord
+s’informer être sur de l’information avant de partager.
+On constate que ceux qui utilisent les réseaux sociaux, en
+particulier sont les jeunes adolescents qui se comparent
+toujours à des images publiés par les gens. Les réseaux
+sociaux ont en particulier très bien des cotés très dangereux,
+pourtant son conçu pour se faire des amis et des rencontres.
+Ces jeunes adolescents ne veulent absolument rien manquer,
+pour ce fait ils ont toujours leurs téléphones en main pour ne
+rien manquer sur les réseaux sociaux… pendant le moment ils
+sont connectés ils oublient même leur existence, ils sont
+dominés par les publications, d’autre sentent leur existence
+dans le monde virtuel.
+Pourtant, c’est vrai que les réseaux sociaux peuvent être
+parfois agréable et satisfaisant, l’utilisation abusée de ces
+réseaux peuvent également entrainer une souffrance
+mentale du point de vue psychologique comme exemple, la
+
+personne peut être accro, qui peut entrainer ; la dépression
+ou d’irritabilité, pendant que la personne est connecté il se
+sent dans un monde virtuel, en ce moment d’utilisation il
+peut avoir des émotions très désagréable telle la honte.
+En bref, le fait qu’ils n’arrivent pas à diminuer l’utilisation de
+des réseaux sociaux ou encore le fait de passer assez de
+temps sur la connexion peut être à l’origine de la solitude, par
+exemple la personne n’aura pas de temps d’être avec ces
+amis ou même sortir de chez soi, il sera tellement dominer
+par l’internet qu’il n’aura pas le temps pour autre activités,
+cela peut même causer des pertes d’emploi.
+Le fait de passer plusieurs minutes et heures sur les réseaux
+sociaux déjà montre à quel point c’est une perte de temps,
+l’utilisation abusif d’internet rend de nos jour les utilisateur
+très paresseux, sa force est de rompre la solitude cela pousse
+les utilisateurs de s’isoler, rester connecter durant toute la
+journée entrain d’échanger avec les gens à travers son écran
+plutôt qu’être en contact avec les dans le monde réel, alors
+que le contact avec les gens dans le monde réel va
+complément disparaitre. Cette solitude peut causer ce
+comportement blizzard vis-à-vis des gens du monde réel.
 
 \end{document}
