--- a/Mon article.tex
+++ b/Mon article.tex
@@ -206,4 +206,32 @@ que le contact avec les gens dans le monde réel va
 complément disparaitre. Cette solitude peut causer ce
 comportement blizzard vis-à-vis des gens du monde réel.
 
+\section{Cyberdépendance : }
+Nous constatons que la cyberdépendance peut ’être la cause
+de plusieurs effet négatif sur les réseaux et dans la vie de la
+personne. Pour d’autres, être conscient des problèmes ou
+danger de ce que qui se passe sur les réseaux ne suffit pas de
+régler le problème. Pour d’autres, quand l’utilisation des
+
+réseaux sociaux sont exagérés par les individus, ils sont
+attendent d’une maladie mentale alors suivre un certain
+traitement psychologique seront un bon traitement pour
+l’individu. Alors dans ce cas, nous constatons l’intervention de
+deux temps à savoir :
+Observation : observation de soi même sur l’internet est un
+bon signe pour l’individus, le fait de d’observer ces
+publications, ses comportements est un bon départ qui peut
+permettre à l’individus de faire une prise de conscience qui va
+lui permettre de bien se comporter et de bien intervenir par
+la suite.
+Agir : en 1999, Young fait une proposition de série dans la
+quelle donne les conseils à tous les utilisateurs des réseaux à
+utiliser l’internet, mais de la façon approprié et saine. Dans
+cette série de conseil nous suggère également de bien
+pratiquer cette activité régulièrement et des comportements
+souvent opposé. Par exemple, faire ces exercices, prendre sa
+douche et prendre son déjeuner avant de se connecter,
+toutes personne qui le fait habituellement ont moins de
+problème pour l’utilisation des réseaux sociaux.
+
 \end{document}
