--- a/Mon article.tex
+++ b/Mon article.tex
@@ -234,4 +234,115 @@ douche et prendre son déjeuner avant de se connecter,
 toutes personne qui le fait habituellement ont moins de
 problème pour l’utilisation des réseaux sociaux.
 
+\section{Cybercriminalité :}
+La cybercriminalité est une activé criminelle pratiquer par les
+cybercriminelles ou des pirates qui utilisent des ordinateurs,
+un appareil connecté ou un réseau informatique pour
+accéder aux données personnel des gens, qui rassemble
+toutes les infractions sur la toile.
+Beaucoup sont devenus des arnaqueurs aujourd’hui via les
+réseaux sociaux. Ils se servent de pirater les comptes, prendre
+
+les données des individus pour avoir accès à des
+renseignements personnel très important. D’autres le font
+pour être en possession des mots de passe des comptes
+bancaires, carte de crédit et beaucoup plus. Le fait d’avoir les
+données personnelles des utilisateurs des réseaux par les
+pirates sont très dangereux du point de vue que certaines
+données sont personnelles et très confidentielles et peuvent
+être récupéré par les pirates pour leur faire des chantages en
+demandant parfois une forte somme à payer, il peuvent
+également vider les compte bancaire des individus, ce fait est
+devenu plus une réalité de nos jours. Beaucoup s’en servent
+aujourd’hui pour menacer les utilisateurs, ils opèrent leur
+activité dans tous les pays du monde par exemple la France
+est l’un des pays ou il y a plus de cybercriminels et de pirate
+qui fait près de 2,5 milliards d’euros détournés dans les
+compte bancaire des individus.
+Plus de 95% des entreprises en France sont plus impactés par
+les cybercriminels, des pirates ou des personnes mal
+intentionnées. Pour éviter cela les entreprises payent les plus
+gros expert informatique pour bénéficier un système de
+protection des données des entreprises. Beaucoup
+d’entreprise pensent qu’elles sont protéger parce qu’ils ont
+un expert en système informatique, cela réduire leur
+vulnérabilités. En 2021, le FBI fait un rapport sur la criminalité
+sur les réseaux, plus de 847.000 plaintes déposées et 6,9
+milliard de dollars de perte cause de la cybercriminalité. La
+cybercriminalité a permit aux cybercriminels de piller dans le
+compte des organisations pour transférer dans leur propre
+compte. Ces experts des organisations font le nécessaire pour
+défendre le système informatique des organisations pour que
+les menaces ne puissent atteindre les données confidentielles
+
+des entreprises. Les cybercrimels pirate les comptes des
+individus et des entreprises pour gagner beaucoup d’argent,
+pour ce fait, ils ciblent les banques, les casinos, les sociétés et
+les grande entreprise sont les cibles de ces cybercriminel pour
+gagner une énorme somme d’argent, par contre c’est très
+difficile de tracer ces criminel. Les cybercriminels se
+multiplient chaque jour que Dieu fait à travers les différents
+pays. Ces organisations demandent au gouvernement
+d’exiger la loi sur ceux qui seront attraper afin de montrer
+exemple aux autres qui s’aventureront dans la
+cybercriminalité.
+Le directeur Evan Greenberg de la plus grande compagnie
+d’assurance CHUBB au monde selon lui :
+« la prochaine pandémie qui a une exposition semblable à un
+virus, va être liée aux cyberattaque, car elle n’ont aucune
+limite géographique ou temporelle. »
+Les cyberattaques pourraient également affaiblir l’économie
+d’une ville voir même l’ensemble d’un pays. Le fait que ces
+pirate eux accès à certains compte bancaire ou aux
+entreprises sont généralement liée des erreurs purement
+humaine. Ils prennent les données personnelle en otage,
+pour accéder à ces données, ils rentrent dans le serveur de
+l’entreprise pour pirater le compte via les boites mails d’un
+travailleur qui à oublier par hasard de sur un lien quil ne
+connait ni la source qui donne accès aux cyberpirate.
+Penser aux conséquences qu’une attaque pourrait causer sur
+votre entreprise si vous n’avez pas des espères en système
+informatique pour protéger votre entreprise.
+Les cybercriminels sont à tout pour convaincre leur cible pour
+avoir obtenu ce qu’ils veulent, ils sont super fort en système
+informatique et très rapide en piratage que les organes de
+
+contrôles ne trouvent pas leur trace pour réagir à temps. Face
+à un piratage qui est en cour d’exécution, pour arrêter tout
+cela il faut la communication, la sensibilisation et la
+formation. La communication permet d’attirer l’attention sur
+ces pratiques font c’est criminels à l’égard des gens. Pour
+sensibiliser la génération d’aujourd’hui, faut directement aller
+droit au but pour leurs expliqués les dangers de l’internet.
+Sur les réseaux sociaux, les criminel n’ont pas un cible fixe
+que ça soit les adultes ou les enfants, ils sont tous traiter par
+ces cybercriminel au même égalité. Les cybercriminels se font
+passé pour des jeunes pour être en contact avec un
+adolescent et même certains se déguisent en fille pour enter
+en contact avec les garçons innocent pour faire du chantage
+sur les réseaux.
+Ce phénomène de cybercriminalité est un crime bien organisé
+qui se déroule sur les réseaux entre utilisateurs et les
+criminels, c’est une nouvelle forme de crime qui prend son
+ampleur dans le monde dus à l’avènement de la nouvelle
+technologie informatique.
+En suite, pour lutter contre ces cybercriminels, il faut des
+professionnel en informatique, mettre en place des moyens
+de protection dans les ordinateurs c&#39;est-à-dire avoir des
+antivirus pour protéger les sites et les logiciels des
+organisations ainsi que les ordinateurs.
+Après plusieurs attaques cybercriminel sur les entreprises,
+beaucoup d’organisation nationale ou internationale ont mis
+en place des lois pour lutter et appliquer les sanctions très
+lourd contre ces criminels.
+
+Par contre, c’est devenu un phénomène très difficile pour
+lutter.
+-avant tout, la lutte contre ce phénomène devient de plus en
+plus très difficile à identifier les criminels, malgré les loi, les
+sanctions, et les formations visant à anéantir ces
+cybercriminel, ce phénomène reste très difficile à anéantir
+ces cybercriminels. Certains logiciels comme antivirus sont
+efficace pour la protection des systèmes informatiques.
+
 \end{document}
