--- a/Mon article.tex
+++ b/Mon article.tex
@@ -345,4 +345,74 @@ cybercriminel, ce phénomène reste très difficile à anéantir
 ces cybercriminels. Certains logiciels comme antivirus sont
 efficace pour la protection des systèmes informatiques.
 
+\section{Conclusion :}
+En fin, ce qui impacte la lutte contre la cybercriminalité, c’est
+le manque d’unanimité des pays les plus touchés par ce
+phénomène.
+L’impact des réseaux sociaux sont très large que plusieurs
+applications plusieurs manière d’utiliser ses applications par
+exemple Messenger qui était une application de conversation
+entre amis, mais de nos jours cet outil est devenu de plus en
+plus dangereux qui sert aujourd’hui pas seulement des appels
+mais aussi le partage des images, des appels en live on parle
+aujourd’hui l’impacte des réseaux sociaux, beaucoup de gens
+laisse leur activités pour être sur l’internet, certains veulent
+pas rater les informations qui se passe sur les réseaux c’est
+pourquoi ils sont toujours en ligne. La preuve en Guinée En
+2020, quand le président Guinéen décida de fermer toutes les
+presses privée qui dénonçaient sa position contre un
+troisième mandat, alors pour que le peuple ce fait entendre,
+ils communiquaient sur les événements sur les réseaux
+sociaux qui ont d’ailleurs permit à la chute du président. Les
+artistes utilisent un outil nommé Youtube qui fait aujourd’hui
+la promotion des artistes, ses artistes gagnent aussi beaucoup
+
+d’argent grâce aux vidéos qu’ils mettent sur Youtube.
+Facebook est un outil très dangereux de nos jours tout le
+monde à accès à tes informations donc, il faut sécurisé les
+comptes, être très vigilent pour ne pas se faire piégé par les
+pirates.
+Pour clore, l’utilisation abusive des nouvelles technologies
+informatiques cause beaucoup des problèmes pathologie.
+En 2003, deux auteurs Vallerand et Col, après une longue
+étude sur l’impact des réseaux sociaux ont fait une différence
+entre la passion obsessive et la passion harmonieuse.
+On appelle la passion obsessive l’orque la personne n’arrive
+plus à ce contrôler de ces envies quand il commence une
+activité, par ses envies la personne devient incontrôlable. Ce
+type de passion occupe largement une place dans la vie de la
+personne. Par contre quand à la passion harmonieuse, qui est
+passion dans la quelle la personne choisit de faire ce qu’il
+veut par plaisir. La pratique de ces activité doivent être un
+plaisir par contre quand cela devient incontrôlable l’individu
+entre en commun avec d’autre domaine de la vie.
+En revanche, le fait d’avoir une activité et de le pratiquer une
+activité devrait être tout d’abord un désir réel qui procure un
+sentiment de satisfaction, si par contraire cette activité
+pratiquer par la personne est non seulement temporaire et
+quand ce moment d’excitation passe cela peut causer
+sentiment d’ennui, de vide par la suite, c’est vrai que cela ne
+répond pas à ses besoins mais contenue toujours à pratiquer
+ses activités.
+Les applications les plus utilisés sont : twitter, snapchat,
+facebook, youtube, tiktok pour ne cité que cela, ses
+applications permettent de mettre en relation les gens
+
+partout dans le monde, aide les commerçants de ce trouver
+les fournisseurs ou des clients partout dans le monde.
+L’utilisation de ses applications fait qu’il y a une très grande
+différence entre le monde réel et le monde virtuel. Les
+réseaux sociaux sont important dans la vie de la vie de
+l’homme, l’utiliser n’est pas un crime, par contre, ne pas trop
+consacré plusieurs minutes et heure sur l’internet, ne pas
+trop s’aventurer sur la vie virtuelle. C’est if faut un temps
+pour utiliser l’internet, ne pas se laisser plonger dans le
+monde virtuel…qui n’a rien en rapport avec la vie réel.
+De nos jours, beaucoup de gens utilise les réseaux sociaux
+qui sont très important et qui apporte pour certains individus
+beaucoup d’argent. Il facilite les échanges entre les individus
+dans les pays différent mais aussi facile les rencontres que ça
+soit entre les nouvelles personnes ou de retrouver les amis de
+longue date.
+
 \end{document}
